fix: make tiles wrap

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -38,6 +38,7 @@
         height: 22em;
         position: relative;
         flex: 1;
+        min-width: 350px;
 
         &__background {
             height: 100%;
